[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/menu_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/settings/settings.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/pause_menu/pause_menu.gd" type="Script" id=3]

[node name="PauseMenu" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.133333, 0.133333, 0.247059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.5
margin_top = -50.0
margin_right = 152.5
margin_bottom = 50.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" parent="Buttons" instance=ExtResource( 1 )]
margin_right = 305.0
text = "Continue"

[node name="RestartButton" parent="Buttons" instance=ExtResource( 1 )]
margin_top = 26.0
margin_right = 305.0
margin_bottom = 48.0
text = "Restart"

[node name="SettingsButton" parent="Buttons" instance=ExtResource( 1 )]
margin_top = 52.0
margin_right = 305.0
margin_bottom = 74.0
text = "Settings"

[node name="QuitButton" parent="Buttons" instance=ExtResource( 1 )]
margin_top = 78.0
margin_right = 305.0
margin_bottom = 100.0
text = "Return to main menu"

[node name="Settings" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="Buttons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Buttons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Buttons/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="popup_hide" from="Settings" to="." method="_on_Settings_popup_hide"]
